# blaulicht

./: .gitignore  Caddyfile  Cargo.toml  Makefile  README.md  TODO.md  config.toml  flake.nix  notes.md
blaulicht-analyzer/: Cargo.toml
blaulicht-analyzer/py/: main.py  main2.py
blaulicht-web/: package.json  vite.config.ts
blaulicht-web/src/: _mixins.scss  global.scss  global.ts
crates/core/: Cargo.toml  config.toml
crates/core/dbg/: main.js  package-lock.json  package.json
crates/core/src/: app.rs  config.rs  lib.rs  main.rs  msg.rs  util.rs  utils.rs
crates/core/src/app/: animations.rs  fixtures.rs  graph.rs  log.rs  mod.rs  ui.rs
crates/core/src/audio/: analysis.rs  capture.rs  defs.rs  mod.rs  utils.rs
crates/core/src/dmx/: ._mod.rs  clock.rs  color.rs  mod.rs  state.rs
crates/core/src/dmx/animation/: mod.rs  phaser.rs  state.rs
crates/core/src/dmx/fixture/: dimmer.rs  light.rs  mod.rs  moving_head.rs
crates/core/src/event/: mod.rs
crates/core/src/mainloop/: mod.rs  supervisor.rs
crates/core/src/plugin/: midi.rs  mod.rs  tick.rs  wasm.rs
crates/core/src/routes/: api.rs  html.rs  mod.rs  state.rs  ws.rs
crates/core/web/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
crates/core/web-old/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
crates/core/web-old/html/: dash.html
crates/core/web-old/src/: Page.svelte
crates/core/web-old/src/components/pages/: Main.svelte
crates/core/web-old/src/pages/dash/: App.svelte
crates/core/web/public/assets/: theme.css
crates/core/web/src/components/: ControlMatrix.svelte
crates/core/web/src/components/editor/: Fixture.svelte  FixtureGroup.svelte  StageEditor.svelte
crates/core/web/src/lib/: fetch.ts  types.ts  websocket.ts
crates/core/web/src/lib/components/: Terminal.svelte  app-sidebar.svelte
crates/core/web/src/lib/components/stage_editor/: Fixture.svelte  FixtureGroup.svelte  Slider.svelte  StageEditor.svelte
crates/core/web/src/lib/components/stage_viewer/: Fixture.svelte  FixtureGroup.svelte  StageViewer.svelte
crates/core/web/src/lib/types/: dmx.ts  metrics.ts  selection.ts  state.ts  types.ts
crates/core/web/src/pages/dash/: App.svelte
crates/core/web/src/routes/: +layout.svelte  +page.svelte  audio-monitor.svelte  audio-monitor2.svelte  audio-status.svelte  layout.ts  plugin-status.svelte  system-status.svelte
crates/core/web/src/routes/fixtures/: +page.svelte
crates/firmware/: Cargo.toml  output.wasm
crates/os/: config.toml
crates/plugins/: Cargo.toml  Makefile  output.wasm  output.wat
crates/plugins/src/: blaulicht.rs  error.rs  lib.rs  midi.rs  ui.rs
crates/plugins/src/_user/: _state.rs  beat.rs  clock.rs  fogger.rs  midi.rs  mod.rs  mood.rs  video.rs
crates/plugins/src/_user/config/: mod.rs
crates/plugins/src/_user/state/: animation.rs  strobe.rs  video.rs
crates/plugins/src/user/: mod.rs
crates/shared/: Cargo.toml
src/: app.rs  audio.rs  config.rs  dmx.rs  lib.rs  main.rs  midi.rs  performance.rs  utils.rs  wasm.rs
src/audio/: analysis.rs  defs.rs  stream.rs
src/routes/: api.rs  html.rs  mod.rs  state.rs  (+1 more)
wasm/: Cargo.toml  Makefile  config.toml  input.c  input.c.SINGLE_4CHAN_DDJ400.COPY  input_copy.c_  log.h  output.wasm
wasm-c/: blaulicht.c  blaulicht.h  defs.h  imports.h  input.c  input.c.SINGLE_4CHAN_DDJ400  log.c
(+58 files in other folders)
