[package]
name = "blaulicht-core"
version = "0.1.0"
authors = ["MikMuellerDev"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.76"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
spin_sleep = "1.2.1"
cpal = "0.15.3"
simple_logger = "5.0.0"
audioviz = { version = "0.4.4", features = ["serde"] }
anyhow = "1.0.94"
toml = "0.8.19"
actix-files = "0.6.6"
actix-web = "4.9.0"
serde_json = "1.0.135"
crossbeam-channel = "0.5.14"
env_logger = "0.11.6"
actix = "0.13.5"
actix-web-actors = "4.3.1"
actix-ws = "0.3.0"
itertools = "0.14.0"
wasmtime = "31.0.0"
midir = "0.10.1"
wmidi = "4.0.10"
enttecopendmx = "0.1.1"
uuid = { version = "1.16.0", features = ["v4"] }
thread-priority = "1.2.0"
notify = "7.0.0"
blaulicht-shared = { path = "../shared" }
crossbeam-queue = "0.3.12"
heapless = "0.8.0"
maplit = "1.0.2"

[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.3"
libc = "0.2"

# [profile.release]
# opt-level = 3

[profile.release]
# opt-level = "z"         # Defaults to speed vs size. Change this:
opt-level = 3           # Maximum optimizations for speed
lto = true              # Enable Link-Time Optimization
codegen-units = 1       # Fewer units = better optimization opportunities
debug = false           # No debug symbols
overflow-checks = false # Disable integer overflow checks
strip = "debuginfo"     # Optional: strips debug info from binary

