[package]
name = "blaulicht-plugins"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
interpolate = "0.2.3"
map-range = "0.1.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
blaulicht-shared = { path = "../shared" }

[profile.release]
# opt-level = "z"         # Defaults to speed vs size. Change this:
opt-level = 3           # Maximum optimizations for speed
lto = true              # Enable Link-Time Optimization
codegen-units = 1       # Fewer units = better optimization opportunities
debug = false           # No debug symbols
overflow-checks = false # Disable integer overflow checks
strip = "debuginfo"     # Optional: strips debug info from binary

